# voidlink

./: .env.example  .gitignore  BASE_PROMPT.md  COMMIT_EDITMSG  Cargo.toml  HEAD  LICENSE  Makefile  ORIG_HEAD  PERFORMANCE_AUDIT.md  README.md  TERMINAL_SESSION_CHANGES.md  TESTING.md  cursor-agents-replication.md  definitive-migration-plan.md  docker-compose.yml  gitdir  index  init.md  package-lock.json
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routes/: pages.py
backend/tests/: conftest.py  test_pages.py
desktop/: Cargo.toml
desktop/assets/fonts/: README.md
desktop/src/: fonts.rs  main.rs  motion.rs
desktop/src/fx/: gradient_background.rs  mod.rs
desktop/src/state/: agents.rs  agents_parse.rs  mod.rs  persistence.rs  rail_deck.rs  repo_intel.rs  sessions.rs  sessions_worker.rs  toasts.rs  workspaces.rs
desktop/src/theme/: dark.rs  light.rs  mod.rs  nord.rs
desktop/src/ui/: bottom_pane.rs  center.rs  command_palette.rs  git_panel.rs  mod.rs  notes.rs  repo_intel.rs  right_panel.rs  sidebar.rs  status_bar.rs
desktop/src/ui/agents/: chat.rs  mod.rs  task_form.rs
desktop/src/ui/agents/components/: agent_message.rs  chat_message.rs  chat_timeline_row.rs  composer.rs  diff_panel.rs  event_timeline.rs  mod.rs  pr_draft.rs  status_bar.rs  typing.rs
desktop/src/ui/components/: diff_rows.rs  mod.rs
desktop/src/ui/left_rail/: footer_icons.rs  mod.rs  session_row.rs  session_status_chip.rs  workspace_group.rs
desktop/src/ui/pr/: mod.rs  pr_changes_panel.rs  pr_header_band.rs
desktop/src/ui/right_rail/: deck_toolbar.rs  mod.rs  rail_card.rs
desktop/src/ui/right_rail/cards/: changes.rs  logs.rs  mod.rs  plan.rs  pr_review.rs  preview.rs  tasks.rs  terminal.rs
desktop/src/ui/title_bar/: breadcrumb.rs  mod.rs  window_buttons.rs
desktop/src/ui/widgets/: auto_accept_toggle.rs  badge.rs  branch_chip.rs  delta_count.rs  file_badge.rs  kbd.rs  keyboard_hint_chip.rs  mod.rs  model_selector.rs  scroll_to_bottom_pill.rs  status_dot.rs  tab_subtitle.rs  toast_host.rs  token_budget_meter.rs  tool_call_group.rs
docs/: FEATURE_ANALYSIS_AND_TWITTER_THREAD.md  MIGRATION_PLAN.md  PLAN.md  PROTOCOL.md  QUE_SE_HIZO.md  TECH_GUIDE.md  TESTING.md  codebase-overview.md  egui-desktop-polish-plan.md  egui-phase-7-agent-system.md  egui-ui-parity-guide.md  guia-codebase-rust.md  manual-de-uso.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.voidlink/artifacts/91b7ea57-e74f-4b12-8c20-f3725df613df/: step_03_write_artifact.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_session.rs  git.rs  git_agent.rs  git_review.rs  lib.rs  main.rs  migration.rs  settings.rs
src-tauri/src/agent_runner/: detect.rs  mod.rs  session.rs
src-tauri/src/agents/: base.rs  chat_agent.rs  mod.rs  tool_agent.rs
src-tauri/src/browser/: agent_browser.rs  mod.rs  webview.rs
src-tauri/src/buffer/: highlight.rs  mod.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/git/: ai_commit.rs  apply_hunk.rs  blame.rs  branch.rs  compare.rs  conflict.rs  diff.rs  ls_files.rs  mod.rs  push.rs  refs.rs  repo.rs  safe_checkout.rs  staging.rs  status.rs  worktree.rs
src-tauri/src/git/stack/: discovery.rs  mod.rs  mutations.rs  restack.rs  submit.rs
src-tauri/src/git_agent/: github.rs  mod.rs  pipeline.rs
src-tauri/src/git_review/: audit.rs  checklist.rs  db.rs  github.rs  merge.rs  mod.rs
src-tauri/src/llm/: mod.rs  provider.rs
src-tauri/src/lsp/: mod.rs  server.rs
src-tauri/src/migration/: chunks.rs  db.rs  graph.rs  mod.rs  path_utils.rs  provider.rs  scan.rs  search.rs  workflow.rs
src-tauri/src/prompt_studio/: db.rs  mod.rs
src-tauri/src/shell_integration/: fish.sh
src-tauri/src/tools/: filesystem.rs  mod.rs  search.rs
voidlink-core/: Cargo.toml
voidlink-core/src/: events.rs  fs.rs  lib.rs  settings.rs
voidlink-core/src/agent_runner/: mod.rs
voidlink-core/src/buffer/: mod.rs
voidlink-core/src/git/: blame.rs  branch.rs  diff.rs  mod.rs  push.rs  repo.rs  staging.rs  status.rs  worktree.rs
voidlink-core/src/git_agent/: github.rs  mod.rs  pipeline.rs
voidlink-core/src/git_review/: audit.rs  checklist.rs  merge.rs  mod.rs
voidlink-core/src/lsp/: detect.rs  mod.rs  rpc.rs  server.rs
voidlink-core/src/migration/: chunks.rs  dataflow.rs  db.rs  graph.rs  mod.rs  path_utils.rs  provider.rs  scan.rs  search.rs  workflow.rs
voidlink-core/src/prompt_studio/: db.rs  mod.rs
voidlink-core/src/shell_integration/: bash.sh  mod.rs  zsh.sh
(+181 files in other folders)
