[package]
name = "voidlink-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
voidlink-core = { path = "../voidlink-core" }
eframe = "0.31"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
egui_term = "0.1.0"
egui_commonmark = "0.20"
crossbeam-channel = "0.5"
