[package]
name = "voidlink"
version = "0.1.0"
description = "VoidLink - Desktop tool suite"
authors = ["VoidLink Contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "voidlink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
voidlink-core = { path = "../voidlink-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
uuid = { version = "1", features = ["v4"] }
dashmap = "6.1.0"
portable-pty = "0.8"
base64 = "0.22"
git2 = { version = "0.19", features = ["vendored-libgit2"] }
