[package]
name = "voidlink"
version = "0.1.0"
description = "VoidLink - Desktop tool suite"
authors = ["VoidLink Contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "voidlink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
git2 = { version = "0.19", features = ["vendored-libgit2"] }
dashmap = "6.1.0"
ignore = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
