[package]
name = "voidlink-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
keyring = "2"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.37", features = ["bundled"] }
ignore = "0.4"
blake3 = "1.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
git2 = { version = "0.19", features = ["vendored-libgit2"] }
dashmap = "6.1.0"
base64 = "0.22"
ropey = "1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy", "parsing"] }
